fix menu z-index

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -165,7 +165,7 @@ body{
     position: relative;
     background-color: #ffffff;
     width: 100%;
-    z-index: 12;
+    z-index: 300;
     // position: fixed;
     display: flex;
     // padding: 0 5px;
@@ -193,7 +193,7 @@ body{
         }
     }
     .navbar-nav{
-        z-index: 2;
+        z-index: 200;
         position: absolute;
         width: 100%;
         padding: 20px 0;
